# cours-mdp

./: .gcloudignore  .gitignore  .isort.cfg  DEVELOPMENT.md  Dockerfile  README.md  dev-requirements.txt  main.py  pyproject.toml  requirements.txt  storage.py
storage/: __init__.py  fake.py  firestore.py  memory.py  replitdb.py  sqlite.py
strategies/: __init__.py  hashed.py  md5.py  plaintext.py  rot13.py  salted.py  salted_md5.py
templates/: base.html  base.j2  home.html  home.j2  listusers.html  listusers.j2  login.html  login.j2  register.html  register.j2  userinfo.html  userinfo.j2
